--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,6 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@300&family=Poppins&family=Potta+One&family=Rajdhani:wght@300;400&family=Rubik+Moonrocks&family=Shadows+Into+Light&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  padding: 0;
+  box-sizing: border-box;
 }
